force-app/main/default/objects/batchjobsch__Batch_Job_Log__c/fields/batchjobsch__Batch_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>batchjobsch__Batch_Job_Name__c</fullName>
    <description>Apex Batch Job class name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Batch Job Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>