force-app/main/default/objects/batchjobsch__Batch_Job_Log__c/fields/batchjobsch__Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>batchjobsch__Completed_Date__c</fullName>
    <description>Batch job completed time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completed Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>