force-app/main/default/objects/batchjobsch__Batch_Job_Log__c/fields/batchjobsch__Execution_Result__c.field-meta.xml
<CustomField>
    <fullName>batchjobsch__Execution_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Execution Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>